# psudorunner

./: .gitignore  AST.c  AST.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Parser.c  Parser.h  README.md  cmake_install.cmake  main.c
.github/workflows/: cmake-multi-platform.yml
ExecutionEngine/: ExecutionEngine.c  ExecutionEngine.h  Namespace.c  Namespace.h  Resolver.c  Resolver.h  Variable.h  resolveIdentifier.c
Parser/: ASTNode.h  Expression.h  Parser.c  Parser.h  parseAssignment.c  parseDeclare.c  parseElse.c  parseFor.c  parseFuncCall.c  parseIf.c  parseOutput.c  parseRepeat.c  parseWhile.c
Tokenisation/: Token.h  Tokenizer.c  Tokenizer.h  TokensList.c  TokensList.h
common/: List.c  List.h  Stack.c  Stack.h  tokenTypeToString.c  tokenTypeToString.h
errors/: errors.c  errors.h  parserErrors.c  parserErrors.h  syntaxChecker.c  syntaxChecker.h
pseudo_std/: std.h
src/: main.c
src/ExecutionEngine/: Namespace.c  Variable.h  execSTDFunc.c  resolveIdentifier.c
src/Parser/: Expression.h  Function.h  Parser.c  Parser.h  parseAssignment.c  parseDeclare.c  parseFor.c  parseFuncCall.c  parseRepeat.c  parseWhile.c
src/Tokenisation/: Tokenizer.c  Tokenizer.h
src/common/: List.h  tokenTypeToString.c  tokenTypeToString.h
src/errors/: errors.c  errors.h  internalErrors.c  internalErrors.h  syntaxChecker.c
src/pseudo_std/: std.c  std_INT.c
test/: CMakeLists.txt  CTestTestfile.cmake  Tokenizer.cpp  tokenizerTestUtils.h
testing/: testTokenizer.c  testTokenizer.h
